--- a/style.css
+++ b/style.css
@@ -50,9 +50,8 @@ body {
 
 .form-control input:focus,
 .form-control input:valid {
-  outline: none;
-  color: #fff;
-  font-size: medium;
+  outline: 0;
+  border-bottom-color: lightblue;
 }
 
 .button {
@@ -78,9 +77,31 @@ body {
 
 .text {
   margin-top: 30px;
-  letter-spacing: 0.5px;
-}
+ }
 
 .container a:hover {
   opacity: 0.7;
+}
+
+.form-control label {
+  position: absolute;
+  top: -5px;
+  left: 0;
+}
+
+.form-control label span {
+  display: inline-block;
+  font-size: 18px;
+  min-width: 5px;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0265, 1.55);
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span {
+  color: lightblue;
+  transform: translateY(-20px);
+}
+.form-control a {
+  display: block;
+  margin: inherit;
 }
